# tradewithcongress

./: .dockerignore  .env.example  .gitignore  Makefile  PROJECT_CONTEXT.md  README.md  docker-compose.prod.yml  docker-compose.yml
api/: Dockerfile  README.md  package.json  tsconfig.json
api/src/: app.test.ts  app.ts  config.ts  db.ts  index.ts  marketData.test.ts  marketData.ts  readModels.ts  version.ts
db/: README.md
db/migrations/: 0001_initial_schema.sql  0002_derived_state_and_parse_tracking.sql  0003_assets_natural_key.sql  0003_house_sync_constraints.sql  0004_read_models.sql  0005_search_indexes.sql  0006_official_profile_photos.sql  0007_drop_official_bioguide_uniqueness.sql  0008_trade_activity_photo_urls.sql  0009_ticker_detail_photo_urls.sql
infra/: README.md
ingest/: Dockerfile  README.md  pyproject.toml
ingest/src/ingest/: __init__.py  cli.py  config.py  db.py  house.py  house_assets.py  house_holdings.py  house_transactions.py  migrate.py  official_photos.py  pdf.py
ingest/tests/: conftest.py  test_house.py  test_house_assets.py  test_house_holdings.py  test_house_transactions.py  test_official_photos.py  test_pdf.py  test_read_models.py
scripts/: api.sh  dev.sh  ingest.sh  load-env.sh  migrate.sh  web.sh
web/: Dockerfile  README.md  index.html  nginx.conf  package.json  vite.config.ts
web/src/: App.css  App.tsx  api.ts  charts.tsx  index.css  insights.test.ts  insights.ts  logos.test.ts  logos.ts  navigation.test.ts  navigation.ts
