[project]
name = "ingest"
version = "0.1.0"
description = "Ingestion and parsing pipeline for congressional disclosures"
readme = "README.md"
authors = [
    { name = "Kaung Htet", email = "kayhzaw@gmail.com" } 
]
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "pypdf>=6.1.1",
    "psycopg[binary]>=3.2.13",
    "pytest>=8.4.2",
    "pydantic-settings>=2.11.0",
    "structlog>=25.5.0",
]

[project.scripts]
ingest = "ingest.cli:main"
migrate = "ingest.migrate:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
